--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ img{
 .orange{
     color: orange;
 }
+.sizedbox_10{
+    width: 10;
+    display: inline;
+}
 section{
     padding: 30px;
     margin: 10px;
@@ -92,4 +96,33 @@ header{
     background-color:slategray;
     color: white;
     padding: 20px;
+}
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; 
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+img{
+    display: block; 
+    margin: 0 auto;
+    width: 20%;
 }
