--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ code{
     background-color:antiquewhite;
 }
 .terminal{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.882);
     color: white;
 }
 .relax{
@@ -128,7 +128,7 @@ header{
 img{
     display: block; 
     margin: 0 auto;
-    width: 40%;
+    width: 60%;
 }
 
 @media screen and (max-width: 600px) {
@@ -145,4 +145,8 @@ img{
         margin: 0 auto;
         width: 60%;
     }
+}
+
+.small-img{
+    width: 20%;
 }
