--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ section{
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
 }
 header{
     background-color:slategray;
@@ -102,6 +103,12 @@ header{
     padding: 20px;
 }
 
+.example{
+    background-color:thistle;
+    padding: 15px;
+    margin: 20px;
+    display: block;
+}
 
 .tooltip {
     position: relative;
